Mi segundo push

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>About - Pragmatic Auto-Translator</title>
-    <meta name="description" content="Learn about the research behind the corpus-informed, whole-document approach of the Pragmatic Auto-Translator." />
+    <title>About - Neurodivergent Auto-Translator</title>
+    <meta name="description" content="Learn about the research behind the corpus-informed, whole-document approach of the Neurodivergent Auto-Translator." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <h1 class="nav-title">Pragmatic Auto-Translator</h1>
+            <h1 class="nav-title">Neurodivergent Auto-Translator</h1>
             <div class="nav-items">
                 <a href="../index.html" class="nav-item">Auto-Translator</a>
                 <a href="corpora.html"" class="nav-item">Corpora</a>
@@ -23,12 +23,10 @@
     <main class="main-container">
         <!-- All content in one continuous section -->
         <section class="section-card">
-            <h2>About the Pragmatic Auto-Translator</h2>
-            <p>The Pragmatic Auto-Translator project challenges the dominant approach to both human and machine translation, where content is divided up and translated sentence-by-sentence using opaque automatic translation systems. This iteration has been designed to teach workshop attendees at UNAM San Miguel Allende a more pragmatic approach to translation technology.</p>
-
-            <h2 style="margin-top: 1.5rem;">Rethinking How Translation Works</h2>
-            <p>Our workshop starts with a fundamental question: <strong>How do people actually write?</strong></p>
-            <p style="margin-bottom: 1.5rem;">Writing is a non-linear process of drafting and revising. Writers don’t create a table and write each sentence in its own cell, yet this is exactly how most translation technology works today. We believe this mismatch is at the heart of many translation quality problems.</p>
+            <h2>About the Neurodivergent Auto-Translator</h2>
+            <p><strong>What happens when you try to translate complex ideas about the human mind using rigid, sentence-by-sentence machines?</p></strong>
+            <p>Most of the time, you lose the nuance.</p>
+            <p>The <strong>Neurodivergent Auto-Translator</strong> is an experiment that involves doing things differently. Developed as part of a translation technology workshop at UNAM San Miguel de Allende, this project explores how we can build automatic translation tools that are more ethically grounded, context-aware, and linguistically informed, starting with the language of neurodivergence.</p>
 
             <h2 style="margin-top: 1.5rem;">What Makes Translation Pragmatically Appropriate?</h2>
             <p>Pragmatics in translation serves as a measure of coherence on two crucial levels:</p>
@@ -40,21 +38,21 @@
             <p>Achieving pragmatically appropriate translation requires refashioning ideas so they align with both document-level expectations (how this type of text typically works) and cultural expectations (how this audience thinks and communicates). Good writing will sometimes break the rules, but we believe sentence-by-sentence translation has little chance of achieving true pragmatic appropriateness.</p>
 
             <h2 style="margin-top: 1.5rem;">Our Corpus-Informed Approach</h2>
-            <p style="margin-bottom: 1.5rem;">We’re designing an automatic translator that embraces two major paradigm shifts:</p>
+            <p style="margin-bottom: 1.5rem;">The Neurodivergent Auto-Translator is built around two major shifts in how we approach translation:</p>
             
             <div class="spex-grid">
                 <div class="spex-box">
                     <h3>1. Whole-document translation</h3>
-                    <p>Moving beyond sentence-by-sentence processing to consider entire documents as coherent units</p>
+                    <p>We move beyond sentence-by-sentence processing to consider full texts as coherent, structured arguments, fundamental in academic and clinical writing about neurodivergence.</p>
                 </div>
                 <div class="spex-box">
                     <h3>2. Corpus-informed methodology</h3>
-                    <p>Using authentic writing samples rather than translation-informed training data</p>
+                    <p>Rather than using traditional translation data, we rely on authentic writing samples from the fields of psychology and psychiatry, focusing on how neurodivergence is represented in real-world academic discourse.</p>
                 </div>
             </div>
 
             <h2 style="margin-top: 1.0rem;">How Our Specialized Corpora Work</h2>
-            <p style="margin-bottom: 1.5rem;">We curate specialized corpora that reflect how people actually write in specific contexts. From this knowledge, we create vectors at three levels:</p>
+            <p style="margin-bottom: 1.5rem;">We curate carefully selected corpora that reflect how professionals actually write about neurodivergence in specific contexts. From this material, we generate vectors at multiple levels of organization:</p>
             
             <table style="margin-bottom: 1.5rem;">
                 <tr>
@@ -101,8 +99,8 @@
     </main>
 
     <footer class="footer">
-        <p>Pragmatic Auto-Translator - UNAM-SMA Workshop Demo</p>
-        <p>By Alaina Brandt - 2025</p>
+        <p>Neurodivergent Auto-Translator - UNAM-SMA</p>
+        <p>By Carolina Carreola - 2025</p>
     </footer>
 
     <script>
