--- a/frontend/corpora.html
+++ b/frontend/corpora.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Corpora - Pragmatic Auto-Translator</title>
-    <meta name="description" content="Explore the curated and authentic authentic English and Spanish writing samples that inform the Pragmatic Auto-Translator’s translation outputs in the domain of AI." />
+    <title>Corpora - Neurodivergent Auto-Translator</title>
+    <meta name="description" content="Explore the curated and authentic authentic English and Spanish writing samples that inform the Neurodivergent Auto-Translator’s translation outputs in the domain of Psychology and Psychiatry, with a focus on academic discourse around neurodivergence." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <h1 class="nav-title">Pragmatic Auto-Translator</h1>
+            <h1 class="nav-title">Neurodivergent Auto-Translator</h1>
             <div class="nav-items">
                 <a href="../index.html" class="nav-item">Auto-Translator</a>
                 <a href="corpora.html" class="nav-item" style="border-bottom-color: var(--gray-300);">Corpora</a>
@@ -23,10 +23,12 @@
     <main class="main-container">
         <section class="section-card">
             <h2>Corpus Sources</h2>
-            <p>Our corpus-informed approach has been developed specifically for the domain of <strong>Generative Artificial Intelligence</strong>. We are actively developing corpora for additional domains including climate change and immigration policy.</p>
+            <p>Our corpus-informed approach has been developed specifically for the domain of <strong>Psychology and Psychiatry</strong>, with a focus on academic discourse around <strong>neurodivergence</strong>.</p>
             
-            <p style="margin-top: 1rem;">The documents below represent carefully curated sources that reflect authentic writing patterns in English and Spanish within the AI domain. These sources inform our translation system’s understanding of how ideas are naturally expressed in each language.</p>
+            <p style="margin-top: 1rem;">The documents used in this first version were carefully selected to reflect authentic writing patterns in English and Spanish within this domain. These sources help our translation system recognize how ideas related to mental health, diagnosis, neurodevelopmental conditions, and identity are naturally expressed across languages.</p>
+            <p style="margin-top: 1rem;">We’re currently working with academic articles, clinical guidelines, and institutional publications that represent how professionals write about neurodivergence in real-world contexts.</p>
         </section>
+
 
         <!-- Loading indicator -->
         <div id="loadingIndicator" class="section-card">
@@ -52,8 +54,8 @@
     </main>
 
     <footer class="footer">
-        <p>Pragmatic Auto-Translator - UNAM-SMA Workshop Demo</p>
-        <p>By Alaina Brandt - 2025</p>
+        <p>Neurodivergent Auto-Translator - UNAM-SMA</p>
+        <p>By Carolina Carreola - 2025</p>
     </footer>
 
     <script>
