--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Pragmatic Auto-Translator</title>
+    <title>Neurodivergent Auto-Translator</title>
     <meta name="description" content="Corpus-informed auto-translator that takes a whole document instead of a sentence-by-sentence approach." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pragmatic Auto-Translator</title>
     <link rel="stylesheet" href="frontend/css/styles.css">
 </head>
 <body>
     <header class="header">
         <nav class="nav-container">
-            <h1 class="nav-title">Pragmatic Auto-Translator</h1>
+            <h1 class="nav-title">Neurodivergent Auto-Translator</h1>
             <div class="nav-items">
                 <a href="#" class="nav-item">Auto-Translator</a>
                 <a href="frontend/corpora.html" class="nav-item">Corpora</a>
@@ -35,7 +34,7 @@
                 <span id="targetLanguage">Spanish</span>
             </div>
             <div class="corpus-info">
-                <strong>Corpus Domain:</strong> Generative Artificial Intelligence
+                <strong>Corpus Domain:</strong> Psychology and Psychiatry
                 <br>
                 <strong>Context:</strong> This translator references domain-specific content to provide contextually-aware translations
             </div>
@@ -128,8 +127,8 @@
     </main>
 
     <footer class="footer">
-        <p>Pragmatic Auto-Translator - UNAM-SMA Workshop Demo</p>
-        <p>By Alaina Brandt - 2025</p>
+        <p>Neurodivergent Auto-Translator - UNAM-SMA</p>
+        <p>By Carolina Carreola - 2025</p>
     </footer>
 
     <script>
