--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                     <p>(sentence-level systems)</p>
                 </div>
                 <div class="spex-box">
+                    <h4><strong>General-purpose GAI translation</strong></h4>
+                    <p>(without domain context)</p>
+                </div>
+                <div class="spex-box">
                     <h4><strong>Hybrid CAT workflows</strong></h4>
                     <p>(baseline comparisons)</p>
                 </div>
-                </div>
-                <div class="spex-box">
-                    <h4><strong>General-purpose GAI translation</strong></h4>
-                    <p>(baseline comparisons)</p>
                 </div>
             </div>
             
