mi septimo push

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -35,14 +35,14 @@
                     <p>If you’re interested in this topic, working on something similar, or just want to connect, feel free to reach out.</p>
                     
                     <div class="contact-links">
-                        <a href="https://www.linkedin.com/in/carolina-carreola/" target="_blank" class="contact-link linkedin">
-                            LinkedIn
+                        <a href="https://www.linkedin.com/in/carolina-carreola/" target="_blank" class="contact-link linkedin"> 
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn icon" class="icon">
                         </a>
                         <a href="https://github.com/CarolinaCarreola" target="_blank" class="contact-link github">
-                            GitHub
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub icon" class="icon">
                         </a>
-                        <a href="https://www.instagram.com/carolinacarreola/" target="_blank" class="contact-link instagram">
-                            Instagram
+                         <a href="https://www.instagram.com/carolinacarreola/" target="_blank" class="contact-link instagram">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram icon" class="icon">
                         </a>
                     </div>
                 </div>
